# UVT

./: .GIT_QUICKOPS_CONFIG  ._UVT.xcodeproj  .gitignore  Gemfile  README.md  SECURITY.md  UVT.sublime-workspace  app-ads.txt  appveyor.yml  main.py  podfile  pyproject.toml  requirements.txt
.codacy/: cli.sh  codacy.yaml
.github/: delete-merged-branch-config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  featureRequest.md
.github/workflows/: build-and-release.yml  create-release.yml  released.yml  xcode_tests.yml
UVT/: ._AppDelegate.swift  ._ViewController.swift  AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
UVT.xcodeproj/: project.pbxproj
UVT.xcodeproj/xcshareddata/xcschemes/: UVT.xcscheme  UVTUITests.xcscheme
UVT.xcworkspace/: contents.xcworkspacedata
UVT/Controllers/: AppDelegate.swift  CopperPairCalcViewController.swift  HomeViewController.swift  ImageViewController.swift  SceneDelegate.swift  StaticIPViewController+IPInfo.swift  StaticIPViewController+Ins.swift  StaticIPViewController+Main.swift  StaticIPViewController.swift
UVT/Models/: CopperPair.swift
UVTTests/: UVTTests.swift
UVTUITests/: UVTTakeScreenshots.swift  UVTUITests.swift  UVTUITestsLaunchTests.swift
assets/: app_colors.py
classes/: CopperPair.py  IP.py
fastlane/: Appfile  Deliverfile.swift  Fastfile  Matchfile  README.md  Snapfile
fastlane/screenshots/: Framefile.json  screenshots.html
views/: __init__.py  copper.py  copper_color_code.py  distance_calc.py  fiber_color_code.py  flet_easy.py  home.py  rj45_scheme.py  uv_static_ips.py
(+43 files in other folders)
